# cargo-workspace-version-tools

./: Cargo.toml
mocks/: readme.md
mocks/prerelease_workspace/: Cargo.toml
mocks/prerelease_workspace/c/: Cargo.toml
mocks/prerelease_workspace/prerelease-ahead-major/: Cargo.toml
mocks/prerelease_workspace/prerelease-ahead-minor/: Cargo.toml
mocks/prerelease_workspace/prerelease-ahead-patch/: Cargo.toml
mocks/prerelease_workspace/prerelease-only-1-0-0/: Cargo.toml
mocks/stable_workspace/: Cargo.toml
mocks/stable_workspace/a0-1-0/: Cargo.toml
mocks/stable_workspace/a0-1-1/: Cargo.toml
mocks/stable_workspace/a0-2-0/: Cargo.toml
mocks/stable_workspace/a1-0-0/: Cargo.toml
mocks/stable_workspace/a1-0-1/: Cargo.toml
mocks/stable_workspace/a1-1-0/: Cargo.toml
mocks/stable_workspace/a2-0-0/: Cargo.toml
mocks/stable_workspace/b/: Cargo.toml
mocks/stable_workspace/prerelease-ahead-major/: Cargo.toml
mocks/stable_workspace/prerelease-ahead-minor/: Cargo.toml
mocks/stable_workspace/prerelease-ahead-patch/: Cargo.toml
mocks/stable_workspace/prerelease-matches-stable-0-1-0/: Cargo.toml
mocks/stable_workspace/prerelease-matches-stable-1-0-0/: Cargo.toml
mocks/stable_workspace/stable-only-0-1-0/: Cargo.toml
mocks/stable_workspace/stable-only-0-1-1/: Cargo.toml
mocks/stable_workspace/stable-only-0-2-0/: Cargo.toml
mocks/stable_workspace/stable-only-1-0-0/: Cargo.toml
mocks/stable_workspace/stable-only-1-0-1/: Cargo.toml
mocks/stable_workspace/stable-only-1-1-0/: Cargo.toml
mocks/stable_workspace/stable-only-2-0-0/: Cargo.toml
src/: main.rs
src/commands/: bump.rs  make_at_least_stable.rs  make_prerelease.rs  mod.rs  sync.rs
src/common/: bump_tree.rs  colors.rs  git.rs  graph.rs  logging.rs  mod.rs  package.rs  version_extension.rs  workspace.rs
src/common/bump_tree/: instruction.rs  mod.rs  (+2 more)
(+4 files in other folders)
