[package]
name = "workspace-version-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
toml_edit = "0.21.0"
log = "0.4.20"
env_logger = "0.10.1"
crates_io_api = { version = "0.8.2", default-features = false, features = ["rustls"] }
clap = { version = "4.4.10", features = ["cargo"] }

