[package]
name = "workspace-version-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
toml_edit = "0.21.0"
log = "0.4.20"
env_logger = "0.10.2"
crates_io_api = { version = "0.8.2", default-features = false, features = ["rustls"] }
clap = { version = "4.4.18", features = ["cargo"] }
chrono = "0.4.33"
cargo_metadata = "0.18.1"
semver = "1.0.21"
git2 = "0.18.1"


