[workspace]
resolver = "2"

members = [
  "stable-only-0-1-0",
  "stable-only-0-1-1",
  "stable-only-0-2-0",
  "stable-only-1-0-1",
  "stable-only-1-1-0",
  "stable-only-2-0-0",
  "stable-only-1-0-0",
  "prerelease-ahead-major",
  "prerelease-ahead-minor",
  "prerelease-ahead-patch",
  "prerelease-matches-stable-0-1-0",
  "prerelease-matches-stable-1-0-0",
  "a",
  "b",
  "c"
]
